# ship-stowage-model

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
exercises/: bonus.md  bonus.txt  ex2_305170987_316607696.rar  readme.md  readme.txt  students.txt
hw1/: makefile  readme.txt  students.txt
hw1/Travel_1/: AAAAA_1.cargo_data
hw1/Travel_2/: AAAAA_9.cargo_data
hw1/Travel_3/: Plan
hw1/expected_output/1/: simulation.errors.csv  simulation.results.csv
hw1/expected_output/2/: simulation.results.csv
hw1/input/Travel_1/: BBBBB_1.cargo_data  DDDDD_1.cargo_data  EEEEE_1.cargo_data  Plan  Route
hw1/input/Travel_2/: Route
hw1/input/Travel_3/: AAAAA_1.cargo_data
input-examples/: ContainersAtPort.csv  RouteFile.csv  ShipPlan.csv
input-examples/Travel-Roots/without-junk-bytes/: AAAAA_1.cargo_data  BBBBB_2.cargo_data
input-examples/Travel_1/: ABCDE_1.cargo_data  ABCDF_80.cargo_data  Plan
input-examples/Travel_2/: ABCDF_80.cargo_data  ABCDJ_10.cargo_data  Plan
input-examples/Travel_3/: AAAAA_17.cargo_data  Plan  Route
input-examples/Travel_4/: AAAAA_2.cargo_data  BBBBB_17.cargo_data  CCCCC_15.cargo_data  Plan  Route
input-examples/error-proud/LocalTrip/: AAAAA_1.cargo_data
input-examples/error-proud/Travel_1/: Plan.ship_plan  Route.route
input-examples/multiple-travel/LongTrip/: BBBBB_2.cargo_data  Route.route
input-examples/multiple-travel/ShortTrip/: BBBBB_1.cargo_data  DDDDD_1.cargo_data
input-examples/multiple-travel/Travel-Bad-Input-2/: BadRoute.route
input-examples/multiple-travel/Travel-Diverse-Errors/: DDDDD_2.cargo_data
input-examples/multiple-travel/Travel-Diverse-Errors-2/: AAAAA_1.cargo_data  Plan.ship_plan
input-examples/multiple-travel/Travel-No-Errors/: AAAAA_1.cargo_data
input-examples/multiple-travel/Travel-Not-Enough-Storage/: AAAAA_1.cargo_data  AAAAA_2.cargo_data  BBBBB_1.cargo_data  Ship.ship_plan
input-examples/multiple-travel/Travel-Very-Diverse-Errors/: AAAAA_1.cargo_data  BBBBB_1.cargo_data  DDDDD.cargo_data  DDDDD_1.cargo_data
input-examples/multiple-travel/travel_diversed_errors/: AAAAA_1.cargo_data  BBBBB_2.cargo_data  Ship.ship_plan
input-examples/multiple-travel/travel_no_errors/: BBBBB_1.cargo_data  BBBBB_2.cargo_data
input-examples/multiple-travel/travel_not_enough_storage/: DDDDD_1.cargo_data
input-examples/single-travel-difference/LongTrip/: AAAAA_1.cargo_data  AAAAA_2.cargo_data  BBBBB_1.cargo_data  DDDDD_1.cargo_data  Route.route  Ship.ship_plan
input-examples/single-travel/LongTrip/: AAAAA_1.cargo_data  BBBBB_1.cargo_data  Plan  Route.route  Ship.ship_plan
input-examples/test-files/: AAAAA_2.cargo_data  BBBBB_2.cargo_data  FatalPlan  FatalRoute2  Plan
input-examples/test/LongTrip/: AAAAA_1.cargo_data  Ship.ship_plan
input-examples/test/Travel-Very-Diverse-Errors/: AAAAA_1.cargo_data  AAAAA_2.cargo_data  AAAAA_3.cargo_data  CCCCC_1.cargo_data  DDDDD_1.cargo_data  EEEEE_1.cargo_data  Plan.ship_plan  Readme  Route.route
input-examples/test/sanity/: .route
input-examples/tests/: PortCargo.cargo_data  Route  RouteFile.csv  ShipPlan.txt
input-examples/tests/Travel1/: .route
input-examples/tests/Travel4/: AAAAA_2.cargo_data  Route
input-examples/tests/Travel_0/: Route
input-examples/tests/Travel_1/: Plan  Route
input-examples/tests/Travel_3_InvalidShipPlan/: Plan
input-examples/tests/Travel_test/: AAAAA_1.cargo_data  Route
input-examples/tests2/Travel_1/: AGHCS_17.cargo_data
input-examples/travels/Travel_1/: .ship_plan
input-examples/travels/Travel_3/: DASDF_13.cargo_data
src/: Container.cpp  Container.h  ContainerPlan.cpp  ContainerPlan.h  ContainerShip.cpp  ContainerShip.h  CranesOperation.cpp  FloorPlan.cpp  FloorPlan.h  ICranesOperation.h  IStowageProcess.h  IWeightBalancer.h  InputOutput.cpp  InputOutput.h  PackingOperation.cpp  PackingOperation.h  Port.cpp  Port.h  ShipFloor.cpp  ShipFloor.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  StowageProcess.h  WeightBalancer.cpp  WeightBalancer.h
src/actors/: ContainerShip.cpp  ContainerShip.h  ContainerStorage.cpp  ContainerStorage.h  Port.cpp  Port.h
src/algorithms/: BadAlgorithm.cpp  BadAlgorithm.h  CranesOperation.cpp  CranesOperation.h  EfficientStowageAlgorithm.cpp  EfficientStowageAlgorithm.h  NaiveStowageAlgorithm.cpp  NaiveStowageAlgorithm.h  RobustStowageAlgorithm.cpp  RobustStowageAlgorithm.h  SemiAbstractAlgorithm.cpp  SemiAbstractAlgorithm.h  StowageAlgorithm.cpp  StowageAlgorithm.h  StowageAlgorithmInterface.cpp  StowageAlgorithmInterface.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  _305170987_a.cpp  _305170987_a.h  _305170987_b.cpp  _305170987_b.h  makefile
src/algorithms/stowage/: AbstractAlgorithm.h  BadAlgorithm.cpp  IStowageAlgorithm.cpp  IStowageAlgorithm.h  (+5 more)
src/common/: Constants.cpp  Constants.h  constants.cpp  constants.h
src/data_objects/: Container.cpp  Container.h  ContainerPosition.cpp  ContainerPosition.h  PackingOperation.cpp  PackingOperation.h  PortId.cpp  PortId.h  Position.cpp  Position.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h
src/data_structures/: Cargo.cpp  Cargo.h  ContainerStorage.cpp  ContainerStorage.h
src/interfaces/: AbstractAlgorithm.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
src/io/: FileReader.cpp  FileReader.h  InputOutput.cpp  InputOutput.h  ObjectsReader.cpp  ObjectsReader.h
src/simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmTravelTask.cpp  AlgorithmTravelTask.h  AlgorithmValidation.cpp  AlgorithmValidation.h  SimpleTaskProducer.cpp  SimpleTaskProducer.h  SimulationManager.cpp  SimulationManager.h  Simulator.cpp  Simulator.h  SimulatorDataManager.cpp  SimulatorDataManager.h  SimulatorFileManager.cpp  SimulatorFileManager.h  SimulatorUtil.cpp  SimulatorUtil.h  ThreadPoolExecuter.cpp  ThreadPoolExecuter.h  Travel.cpp  Travel.h  main.cpp  makefile
src/utils/: Definitions.h  Printers.cpp  Printers.h  UtilFunctions.cpp  UtilFunctions.h  definitions.h
tests/: FileTests.h  IOTests.h  SimulationTests.h
tests/io_tests/: IOTests.h
(+108 files in other folders)
